faqs example for angular accordion

--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.3",
+    "@angular-extensions/model": "^8.0.0",
+    "@angular/animations": "^8.0.3",
+    "@angular/cdk": "^8.0.2",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
     "@angular/core": "~8.0.3",
     "@angular/forms": "~8.0.3",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "angular-material": "^1.1.19",
+    "angular-material-expansion-panel": "^0.7.2",
+    "angular-material-icons": "^0.7.1",
+    "material-expansion-panel": "^1.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
